Major bugfix: -plan operations button fix (ws-occupiable) Minor bugfixes: -usages of fragment fixed -materialize js excluded where duplicate -removed google's platform js -zero remaining enter time shows custom message Style fixes: -grid system redesign -material icons alignment -some button tags converted to a -button colors added -data-target attribute removed on cancel buttons -button material icons added -autocomplete disabled where unnecessary -login autocomplete label bug fixed -table thead row's children changed to th -user ui's map hidden by default (will not show up on load before ajax request)

--- a/frontend-kibe/src/main/resources/static/css/main.css
+++ b/frontend-kibe/src/main/resources/static/css/main.css
@@ -128,3 +128,5 @@ table.striped > tbody > tr:nth-child(even) {
     stroke-dashoffset: 0;
     stroke-opacity: 1
 }
+
+input:-webkit-autofill { +label { @extend .active; } }
